# anki-generator

./: .gitignore  README.md  example.json  example_latex.json  pyproject.toml
decks/: thirt_conditional.json
src/: __init__.py  main.py
src/entities/: __init__.py  anki_card.py  anki_deck.py
src/services/: __init__.py  anki_package_service.py  html_escaper_service.py  image_loader_service.py  json_reader_service.py
